--- a/index.html
+++ b/index.html
@@ -1,34 +1,68 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
-    <title>New York Yankees</title>
-    <!-- Required meta tags -->
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>WELCOME | NY YANKEES</title>
 
-    <!-- Bootstrap CSS v5.2.1 -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
-    <link rel="stylesheet" href="style.css" />
+    <!-- Google fonts -->
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Nunito:wght@300;400;700&display=swap"
+        rel="stylesheet" />
+
+    <!-- Bootstrap (optional for splash, fine to keep) -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
+
+    <!-- Site stylesheet -->
+    <link href="style.css" rel="stylesheet" />
 </head>
 
 <body>
     <header>
-        <!-- place navbar here -->
+        <nav class="navbar navbar-expand-lg navbar-dark"
+            style="background-color: #00205B; font-family: 'Bebas Neue', sans-serif;">
+            <div class="container-fluid">
+                <a class="navbar-brand d-flex align-items-center" href="index.html">
+                    <img src="imgs/logo.png" alt="Yankees Logo" width="40" height="auto" class="me-2">
+                    <span style="font-size: 1.5rem;"> New York Yankees</span>
+                </a>
+
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#yankeesNavbar"
+                    aria-controls="yankeesNavbar" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+
+                <div class="collapse navbar-collapse" id="yankeesNavbar">
+                    <ul class="navbar-nav ms-auto mb-2 mb-lg-0 text-uppercase">
+                        <li class="nav-item">
+                            <a class="nav-link active" href="home.html">Roster</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="schedule.html">Schedule</a>
+                        </li>
+
+                    </ul>
+                </div>
+            </div>
+        </nav>
     </header>
-    <main class="container">
-        <div id="rosterGrid" class="row g-3">
-
-        </div>
 
 
 
 
-    </main>
-    <footer>
-        <!-- place footer here -->
-    </footer>
+
+    <img src="imgs/logo.png" alt="Spinning yankees logo" class="spinning-logo" width="200" height="200" />
+    <!-- Center‑everything wrapper -->
+    <section class="landing-page d-flex flex-column justify-content-center align-items-center text-center text-white">
+        <img src="imgs/New_York_Yankees_Primary_Logo.svg" alt="spinning-logo" class="spinning-logo" width="200"
+            height="200" />
+        <h1 class="display-1 mt-4">Welcome to the New York Yankees</h1>
+        <p class="lead mt-3">Come and learn more about the team!!!</p>
+        <button id="learnMoreBtn" class="btn btn-outline-light btn-lg mt-4">Learn More About the Yankees</button>
+    </section>
+
+
     <!-- Bootstrap JavaScript Libraries -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
         integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
@@ -37,9 +71,24 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"
         integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
         crossorigin="anonymous"></script>
-    <script src="players.js"></script>
 
-    <script src="roster.js"></script>
+    <script>
+        document.getElementById('learnMoreBtn').addEventListener('click', () => {
+            const leaf = document.querySelector('.spinning-logo');
+
+            // Add zoom-in animation class
+            leaf.classList.add('zoom-in');
+
+            // Disable the button while animating
+            const btn = document.getElementById('learnMoreBtn');
+            btn.disabled = true;
+
+            // Redirect after animation finishes
+            leaf.addEventListener('animationend', () => {
+                window.location.href = 'home.html'; // Change to your actual history page
+            }, { once: true });
+        });
+    </script>
 </body>
 
 </html>
