--- a/home.html
+++ b/home.html
@@ -19,16 +19,16 @@
             style="background-color: #00205B; font-family: 'Bebas Neue', sans-serif;">
             <div class="container-fluid">
                 <a class="navbar-brand d-flex align-items-center" href="index.html">
-                    <img src="imgs/logo.png" alt="Leafs Logo" width="40" height="auto" class="me-2">
+                    <img src="imgs/logo.png" alt="Yankees Logo" width="40" height="auto" class="me-2">
                     <span style="font-size: 1.5rem;"> New York Yankees</span>
                 </a>
 
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#leafsNavbar"
-                    aria-controls="leafsNavbar" aria-expanded="false" aria-label="Toggle navigation">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#yankeesNavbar"
+                    aria-controls="yankeesNavbar" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
 
-                <div class="collapse navbar-collapse" id="leafsNavbar">
+                <div class="collapse navbar-collapse" id="yankeesNavbar">
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0 text-uppercase">
                         <li class="nav-item">
                             <a class="nav-link active" href="index.html">Home</a>
@@ -36,7 +36,9 @@
                         <li class="nav-item">
                             <a class="nav-link" href="schedule.html">Schedule</a>
                         </li>
-
+                        <li class="nav-item">
+                            <a class="nav-link" href="learnMore.html">More Info</a>
+                        </li>
                     </ul>
                 </div>
             </div>
@@ -48,7 +50,50 @@
         </div>
 
 
+        <main class="container py-4">
+            <!-- <div class="row mb-3 g-2">
+                <div class="col-12 col-md-6">
+                    <input type="search" id="searchInput" class="form-control" placeholder="Search roster by name…" />
+                </div>
+                <div class="col-12 col-md-4">
+                    <select id="sortSelect" class="form-select">
+                        <option value="lastName-asc">Last Name (A–Z)</option>
+                        <option value="lastName-desc">Last Name (Z–A)</option>
+                        <option value="firstName-asc">First Name (A–Z)</option>
+                        <option value="firstName-desc">First Name (Z–A)</option>
+                        <option value="position-asc">Position (A–Z)</option>
+                        <option value="position-desc">Position (Z–A)</option>
+                        <option value="age-asc">Age (Youngest First)</option>
+                        <option value="age-desc">Age (Oldest First)</option>
 
+                    </select>
+                </div>
+            </div> -->
+            <div id="rosterGrid" class="row g-3"></div>
+            <div class="modal fade" id="playerModal" tabindex="-1" aria-labelledby="playerModalLabel"
+                aria-hidden="true">
+                <div class="modal-dialog  modal-dialog-centered">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title" id="playerModalLabel">Player Info</h5>
+                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                        </div>
+                        <div class="modal-body text-center">
+                            <img id="modalPhoto" src="" alt="Player Photo" class="img-fluid mb-2" />
+                            <h5 id="modalName"></h5>
+                            <p><strong>Position:</strong> <span id="modalPosition"></span></p>
+                            <p><strong>Age:</strong> <span id="modalAge"></span></p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div id="rosterGrid" class="row g-3"></div>
+        </main>
+
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+        <script src="js/players.js"></script>
+        <script src="js/roster.js"></script>
 
     </main>
     <footer>
