--- a/schedule.html
+++ b/schedule.html
@@ -10,6 +10,54 @@
     <!-- Bootstrap CSS v5.2.1 -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            padding: 20px;
+        }
+
+        h1 {
+            text-align: center;
+        }
+
+        table {
+            width: 100%;
+            border-collapse: collapse;
+            margin-top: 20px;
+        }
+
+        th,
+        td {
+            border: 1px solid #ccc;
+            padding: 12px;
+            text-align: left;
+        }
+
+        th {
+            background-color: #1C2841;
+            color: #fff;
+        }
+
+        tr:nth-child(even) {
+            background-color: #f2f2f2;
+        }
+
+        @media (max-width: 600px) {
+
+            table,
+            thead,
+            tbody,
+            th,
+            td,
+            tr {
+                display: block;
+            }
+
+            th {
+                text-align: right;
+            }
+        }
+    </style>
 </head>
 
 <body>
@@ -44,7 +92,143 @@
         </nav>
     </header>
 
-    <main></main>
+    <main>
+
+
+        <h1>New York Yankees 2025 Schedule</h1>
+        <table>
+            <thead>
+                <tr>
+                    <th>Date</th>
+                    <th>Opponent</th>
+                    <th>Location</th>
+                    <th>Time (PDT)</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>Jun 01</td>
+                    <td>@ Dodgers</td>
+                    <td>Away</td>
+                    <td>4:10 PM</td>
+                </tr>
+                <tr>
+                    <td>Jun 03</td>
+                    <td>vs Guardians</td>
+                    <td>Home</td>
+                    <td>4:05 PM</td>
+                </tr>
+                <tr>
+                    <td>Jun 04</td>
+                    <td>vs Guardians</td>
+                    <td>Home</td>
+                    <td>4:05 PM</td>
+                </tr>
+                <tr>
+                    <td>Jun 05</td>
+                    <td>vs Guardians</td>
+                    <td>Home</td>
+                    <td>4:05 PM</td>
+                </tr>
+                <tr>
+                    <td>Jun 06</td>
+                    <td>vs Red Sox</td>
+                    <td>Home</td>
+                    <td>4:05 PM</td>
+                </tr>
+                <tr>
+                    <td>Jun 07</td>
+                    <td>vs Red Sox</td>
+                    <td>Home</td>
+                    <td>4:35 PM</td>
+                </tr>
+                <tr>
+                    <td>Jun 08</td>
+                    <td>vs Red Sox</td>
+                    <td>Home</td>
+                    <td>3:30 PM</td>
+                </tr>
+                <tr>
+                    <td>Jun 10</td>
+                    <td>@ Royals</td>
+                    <td>Away</td>
+                    <td>4:40 PM</td>
+                </tr>
+                <tr>
+                    <td>Jun 11</td>
+                    <td>@ Royals</td>
+                    <td>Away</td>
+                    <td>4:40 PM</td>
+                </tr>
+                <tr>
+                    <td>Jun 12</td>
+                    <td>@ Royals</td>
+                    <td>Away</td>
+                    <td>4:40 PM</td>
+                </tr>
+                <tr>
+                    <td>Jun 13</td>
+                    <td>@ Red Sox</td>
+                    <td>Away</td>
+                    <td>4:10 PM</td>
+                </tr>
+                <tr>
+                    <td>Jun 14</td>
+                    <td>@ Red Sox</td>
+                    <td>Away</td>
+                    <td>4:15 PM</td>
+                </tr>
+                <tr>
+                    <td>Jun 15</td>
+                    <td>@ Red Sox</td>
+                    <td>Away</td>
+                    <td>10:35 AM</td>
+                </tr>
+                <tr>
+                    <td>Jun 16</td>
+                    <td>vs Angels</td>
+                    <td>Home</td>
+                    <td>4:05 PM</td>
+                </tr>
+                <tr>
+                    <td>Jun 17</td>
+                    <td>vs Angels</td>
+                    <td>Home</td>
+                    <td>4:05 PM</td>
+                </tr>
+                <tr>
+                    <td>Jun 18</td>
+                    <td>vs Angels</td>
+                    <td>Home</td>
+                    <td>4:05 PM</td>
+                </tr>
+                <tr>
+                    <td>Jun 19</td>
+                    <td>vs Angels</td>
+                    <td>Home</td>
+                    <td>10:05 AM</td>
+                </tr>
+                <tr>
+                    <td>Jun 20</td>
+                    <td>vs Orioles</td>
+                    <td>Home</td>
+                    <td>4:05 PM</td>
+                </tr>
+                <tr>
+                    <td>Jun 21</td>
+                    <td>vs Orioles</td>
+                    <td>Home</td>
+                    <td>10:05 AM</td>
+                </tr>
+                <tr>
+                    <td>Jun 22</td>
+                    <td>vs Orioles</td>
+                    <td>Home</td>
+                    <td>8:35 AM</td>
+                </tr>
+            </tbody>
+        </table>
+    </main>
     <footer>
         <!-- place footer here -->
     </footer>
